--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -300,9 +300,10 @@ Full-Width Styles
 #project_title {
   margin: 0;
   color: #fff;
-  font-size: 42px;
+  font-size: 32px;
   font-weight: 700;
   text-shadow: #111 0px 0px 10px;
+  text-align: center
 }
 
 #project_tagline {
@@ -331,6 +332,15 @@ Full-Width Styles
   text-indent: -5000px;
   overflow: hidden;
   background: url(../images/sprite_download.png) no-repeat bottom left;
+}
+
+.nbalogo {
+  display: block;
+  float: left;
+  width: 90px;
+  height:90px;
+  overflow: hidden;
+  background: url(../images/logo.jpg);
 }
 
 .tar_download_link {
